--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Wild Unicorns</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="./public/styles.css"/>
     <!--Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <link rel="icon" type="image/png" href="./public/streaming.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./public/unicorn.png">
 </head>
     <body>
-        <header>
+        <header class="row"> 
+            <img type="image/png" src="./public/unicorn.png" height="50">
             <h1>Welcome to Wild Unicorns</h1>
         </header>
+        <section id="body">
+            <div id="attempts">
+                <div class="attempt">
+                    <h3>Willow 2/1/2021</h3>
+                    <strong>Willow and Eden Love Unicorns!</strong>
+                    <p>wALLow   AN   DEDEN LOvE  UNICORNS!</p>
+                </div>
+                <div class="attempt">
+                    <h3>Eden 2/1/2021</h3>
+                    <strong>Willow and Eden Love Unicorns!</strong>
+                    <p>ww4iiiii1111ppppuuuuk777yyzz5558o</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
