--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                     <p>ww4iiiii1111ppppuuuuk777yyzz5558o</p>
                 </div>
             </div>
+            <div id="reference">
+                Icons made by 
+                    <a href="https://www.freepik.com" title="Freepik">Freepik</a> 
+                    from 
+                    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            </div>
         </section>
     </body>
 </html>
