FIxed media queries

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         <header class="row"> 
-            <img type="image/png" src="./public/unicorn.png" height="50">
+            <img type="image/png" src="./public/unicorn.png">
             <h1>Welcome to Wild Unicorns</h1>
         </header>
         <section id="body">
