Eden Oct update

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <strong>as is so its sit and did last stop land</strong>
                     <p>as is so its sit and did last stop land</p>
                 </div>
+                <div class="attempt">
+                    <h3>Eden 10/18/2022</h3>
+                    <strong>as is so its sit and did last stop land</strong>
+                    <p></p>
+                </div>
             </div>
             <div id="reference">
                 Icons made by 
